<resources>
    <string name="app_name">Terraforming Mars - Legacy</string>
    <string name="generation">Generation</string>
    <string name="production">Production</string>
    <string name="forest">Forest</string>
    <string name="temp_rise">Temp Rise</string>
    <string name="increment">Increment</string>
    <string name="amount">Amount</string>
    <string name="coin_lbl">Coins: %1$s</string>
    <string name="steel_lbl">Steel: %1$s</string>
    <string name="titanium_lbl">Titanium: %1$s</string>
    <string name="plant_lbl">Plants: %1$s</string>
    <string name="energy_lbl">Energy: %1$s</string>
    <string name="heat_lbl">Heat: %1$s</string>
    <string name="generation_lbl"> : %1$s</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="about">About</string>
    <string name="default_description">none</string>
    <string name="default_increment">+0</string>
    <string name="default_generation">: 1</string>
    <string name="forest_fail">Not enough plants</string>
    <string name="temp_rise_fail">Not enough heat</string>
    <string name="credits">Developed by FA SP AR</string>
</resources>