<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:layout_gravity="bottom"
    android:background="@color/footer"
    android:columnCount="4"
    android:padding="0dp"
    android:stretchColumns="0,1,2,3"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableRow>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="4dp"
                    android:src="@drawable/genrationicon" />

                <TextView
                    android:id="@+id/generation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" : 1"
                    android:textColor="@color/text"
                    android:textSize="24dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generation"
                android:textColor="@color/text"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:background="@drawable/button_state"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/gears" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production"
                android:textColor="@color/text"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="10dp"
            android:background="@drawable/button_state"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/foresticon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forest"
                android:textColor="@color/text"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/temp_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="10dp"
            android:background="@drawable/button_state"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/tempicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_rise"
                android:textColor="@color/text"
                android:textSize="12dp" />

        </LinearLayout>

    </TableRow>
</TableLayout>