<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_heat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card"
        app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/heat_fixed_layout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/default_description"
                android:src="@drawable/heaticon" />

            <TextView
                android:id="@+id/heat_amount_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/heat_lbl"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/heat_increment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_increment"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/heat_arrow_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_state"
                android:contentDescription="@string/default_description"
                android:src="@drawable/rounded_keyboard_arrow_down_24"
                app:tint="@color/text"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"/>

        </LinearLayout>

        <TableLayout
            android:id="@+id/heat_hidden_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:stretchColumns="0,1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heat_fixed_layout">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="@string/amount"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/heat_decrement_amount"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:background="@drawable/rounded_button"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/rounded_remove_24"
                            app:tint="@color/vector" />

                        <TextView
                            android:id="@+id/heat_amount_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/default_increment"
                            android:textColor="@color/text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/heat_increment_amount"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:background="@drawable/rounded_button"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/rounded_add_24"
                            app:tint="@color/vector" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:text="@string/increment"
                        android:textColor="@color/text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/heat_decrement_increment"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:background="@drawable/rounded_button"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/rounded_remove_24"
                            app:tint="@color/vector" />

                        <TextView
                            android:id="@+id/heat_increment_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="@string/default_increment"
                            android:textColor="@color/text"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/heat_increment_increment"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:background="@drawable/rounded_button"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/rounded_add_24"
                            app:tint="@color/vector" />

                    </LinearLayout>

                </LinearLayout>

            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>